# bin-reader

./: Cargo.toml  README.md  rustfmt.toml
src/: async_reader.rs  endian.rs  error.rs  io.rs  lib.rs  reader.rs  test.rs
src/reader/: binary.rs  bytes.rs  mod.rs  stream.rs
test/: unascii.txt
