[package]
name = "bin-rs"
license = "MIT"
description = "Binary Reader from multi source"
readme = "README.md"
author = "Mith@mmk"
repository = "https://github.com/mith-mmk/bin-rs"
edition = "2021"
rust-version = "1.58"
version = "0.0.1"
keywords = ["io", "binary"]

[features]
default = []
stream = []
codec = ["encoding_rs"]
async = ["tokio"]

[dependencies]
encoding_rs = {version = "0.8",optional = true}
tokio = {version = "1", optional = true, features = ["io-util","macros", "rt"]}
