[package]
name = "bin-rs"
license = "MIT"
description = "Binary Reader from multi source"
readme = "README.md"
authors = ["mith-mmk <47620686+mith-mmk@users.noreply.github.com>"]
repository = "https://github.com/mith-mmk/bin-rs"
edition = "2021"
rust-version = "1.58"
version = "0.0.8"
keywords = ["io", "binary"]

[features]
default = []
stream = []
codec = ["encoding_rs"]
async = ["tokio"]
util = []

[dependencies]
encoding_rs = {version = "0.8",optional = true}
tokio = {version = "1", optional = true, features = ["io-util","macros", "rt"]}
